fixed buttons alignment

--- a/css/style.css
+++ b/css/style.css
@@ -213,9 +213,10 @@ header {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 1rem 0.5rem;
+  
   cursor: pointer;
-  margin-top: 3rem;
+ 
   border-radius: 2px;
 }
 
@@ -228,11 +229,13 @@ header {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 1rem 0.5rem;
   cursor: pointer;
-  margin-top: 2rem;
+  
+  
   padding: 0.375rem 1.25rem;
   border-radius: 2px;
+  
 }
 
 .readmore-button:hover {
@@ -259,6 +262,8 @@ header {
   flex: 1;
 }
 
+
+
 .h-readmore-img-sofa {
   align-self: center;
   width: 80%;
@@ -267,6 +272,20 @@ header {
 .h-readmore-img {
   align-self: center;
   width: 50%;
+}
+
+.btn-container-readmore {
+  border: 0px solid green;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-end;
+  margin-top: 2rem;
+  
+  
+  
+  
+  
 }
 
 /* Sooyeon */
